Added read me file.

--- a/read me/cormoo_guide.html
+++ b/read me/cormoo_guide.html
@@ -429,7 +429,7 @@ card.print()
 <p>右辺と左辺を加算して左辺に代入します。</p>
 
 <h4> <span> -= </span> <span> $subSet </span> </h4>
-<span>左辺から右辺の値を減算して左辺に代入します。 </p>
+<p>左辺から右辺の値を減算して左辺に代入します。 </p>
 
 
 
